--- a/maitdavis.html
+++ b/maitdavis.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>My Website</title>
+	<script language="JavaScript">
+		alert("BEPIS");
+	</script>
+	
+	
+	
 <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
